fix sidenav overflow

--- a/app/styles/header.css
+++ b/app/styles/header.css
@@ -427,6 +427,9 @@ header .header-sidenav * {
   z-index: 10;
 }
 
+.md-sidenav-left{
+  overflow: hidden;
+}
 .active-sidenav-menu{
   display: block;
   margin-left: 0;
